fixed spacing issue with long inputs and also added text to titles

--- a/intake-form/css/main.css
+++ b/intake-form/css/main.css
@@ -115,7 +115,7 @@ body {
   line-height: 0
 }
 
-.prev-button {
+#prev-button {
   width: 200px;
   height: 40px;
   background-color: #ffffff;
@@ -127,7 +127,7 @@ body {
   border-color: #32b27c;
 }
 
-.next-button {
+#next-button {
   width: 200px;
   height: 40px;
   background-color: #32b27c;
